--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Creepster|Rubik&display=swap');
 
+
+html {
+    overflow-y: scroll;
+}
+
 /*
 ======================
 HOMEPAGE
@@ -69,7 +74,20 @@ HOMEPAGE
     padding-top: 100px;
     padding-left: 16px;
     display: flex;
+    width: 100%;
+}
+
+#homepage__headline {
     width: 50%;
+}
+
+.images-container {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.images-container img {
+    padding: 12px;
 }
 
 .submitContainer {
@@ -124,8 +142,12 @@ hr {
 
 .book__searchResult {
     margin: 12px 0;
+    padding: 8px 0;
 }
 
+.book__searchResult a {
+    color: #0000EE;
+}
 
 /*
 ======================
@@ -140,7 +162,6 @@ BOOKS PAGE
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 120px;
 }
 
 .book_container__inner {
@@ -149,7 +170,6 @@ BOOKS PAGE
     padding: 30px;
     border-radius: 10px;
     width: 75%;
-    margin-bottom: 120px;
     min-width: 533px;
 }
 
@@ -212,6 +232,26 @@ table td:nth-child(2) {
     margin-bottom: 6px;
 }
 
+.review-date {
+    font-size: 12px;
+    text-align: right;
+    color: #EE2400
+}
+
+.review-button {
+    margin: 8px 0;
+    background-color: #F4F1EA;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: black;
+    padding: 12px;
+    cursor: pointer;
+}
+
+.review-button:hover {
+    background-color: #E7C799;
+}
+
 /*
 ======================
 SIGNUP, LOGIN, LOGOUT
@@ -239,14 +279,23 @@ SIGNUP, LOGIN, LOGOUT
 }
 
 #signup_form,
-#login_form {
+#login_form,
+#review_form {
     margin-top: 16px;
 }
 
 #signup_form input,
-#login_form input {
+#login_form input,
+#review_form input,
+#review_form textarea {
     margin-bottom: 8px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.12);
+}
+
+#review_form textarea {
+    width: 100%;
+    height: 120px;
+    border: none;
 }
 
 .welcome h3 {
@@ -329,8 +378,9 @@ h3 {
 }
 
 h4 {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 28px;
+    margin-bottom: 6px;
 }
 
 h5 {
