--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,6 @@
     <div class="nav_containerContent">
         <ul id="topNav_noLogin">
             <li class="logo">the cs50 digital bookshelf</li>
-            <li>about</li>
             {% if not session.logged_in %}
                 <li><a href="{{ url_for('login') }}">log in</a></li>
             {% else %}
@@ -26,7 +25,7 @@
 <section id="homepage_container">
     <div id="homepage_hero">
         <div id="homepage__headline">
-            <h2>Welcome, <span style="color: green">{{ username }}</span>!</h2>
+            <h2>Welcome, <span style="color: green">{{ session["firstname"] }}</span>!</h2>
             <h3>Search our collection now:</h3>
             <form action="{{ url_for('home') }}" method="post">
                 <input id="user_search" name="userSearchInput" type="text" placeholder="Title, author, or ISBN">
