--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,10 @@
 <head>
-    <title>The CS50 Bookshelf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    {% block head %}
+    {% block title %}<title>The CS50 Digital Bookshelf</title>{% endblock title %}
+    {% endblock %}
 </head>
 <body>
     <div id="body_container">
