--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,7 +16,7 @@
         </div>
         <form id="signup_form" action="{{ url_for('signup') }}" method="post">
             <input type="text" name="username" placeholder="Username" required>
-            <input type="email" name="email" placeholder="Email" required>
+            <input type="text" name="firstname" placeholder="First Name" required>
             <input type="password" name="password" placeholder="Password" required>
             <input id="form_submit" type="submit">
         </form>
