--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <input id="form_submit" type="submit">
         </form>
-        <p class="reminder">Already got an account? <a class="reminder-link" href="{{ url_for('login') }}">Log in!</a></p>
+        <p class="reminder" style="color: red;">Already got an account? <a class="reminder-link" href="{{ url_for('login') }}">Log in!</a></p>
         <p class="reminder" style="padding: 12px 0"><a href="{{ url_for('index') }}"><< Return home</a></p>
     </div>
 </div>
